fix: overflow hidden (member list)

--- a/_sass/module/_member.scss
+++ b/_sass/module/_member.scss
@@ -36,7 +36,7 @@
   box-sizing: border-box;
 
   transition: all 0.5s ease;
-  overflow: auto;
+  overflow: hidden;
 
   @media #{$phone} {
     width: 100%;
